<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/collection_menu_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />

    <item
        android:id="@+id/collection_menu_filter"
        android:title="@string/filter"
        android:icon="@drawable/ic_filter"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/collection_menu_sort_name"
        android:title="@string/sort_name"
        app:showAsAction="never"/>

    <item
        android:id="@+id/collection_menu_sort_price"
        android:title="@string/sort_price"
        app:showAsAction="never"/>
</menu>