<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_collection">

    <fragment
        android:id="@+id/navigation_collection"
        android:name="br.com.macaxeira.mtgbinder.features.collection.CollectionFragment"
        android:label="@string/my_collection"
        tools:layout="@layout/fragment_collection" >
        <action
            android:id="@+id/action_navigation_collection_to_cardDetailFragment"
            app:destination="@id/cardDetailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_deck_list"
        android:name="br.com.macaxeira.mtgbinder.features.deck.list.DeckListFragment"
        android:label="@string/deck_list"
        tools:layout="@layout/fragment_deck_list" >
        <action
            android:id="@+id/action_navigation_deck_list_to_deckDetailFragment"
            app:destination="@id/deckDetailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="br.com.macaxeira.mtgbinder.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/deckDetailFragment"
        android:name="br.com.macaxeira.mtgbinder.features.deck.detail.DeckDetailFragment"
        android:label="fragment_deck_detail"
        tools:layout="@layout/fragment_deck_detail" >
        <action
            android:id="@+id/action_deckDetailFragment_to_cardDetailFragment"
            app:destination="@id/cardDetailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <argument
            android:name="deckId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/cardDetailFragment"
        android:name="br.com.macaxeira.mtgbinder.features.carddetail.CardDetailFragment"
        android:label="fragment_card_detail"
        tools:layout="@layout/fragment_card_detail" >
        <argument
            android:name="cardId"
            app:argType="integer" />
    </fragment>
</navigation>